fix: bad menu svg icon and row spacing

--- a/_sass/minima/_navbar.scss
+++ b/_sass/minima/_navbar.scss
@@ -1,6 +1,7 @@
 @charset "utf-8";
 @use "sass:math";
 
+$mobile-nav-pad: 8px 5px;
 
 .site-nav-button {
     display: none;
@@ -18,6 +19,10 @@
     flex-direction: column;
   }
 
+  .sub-menu{
+    padding-top: 5px;
+  }
+
   .site-nav {
     position: relative;
     float: inline-start;
@@ -26,6 +31,18 @@
     width: 100%;
     text-align: left;
     display: none;
+
+    .nav-sub-menu-drop {
+        display: inline-block; 
+        float: right;
+        padding: $mobile-nav-pad;
+        margin: 0px;
+        color: #999;
+    }
+
+    a {
+       padding: $mobile-nav-pad;
+    }
 
     li:hover>a {
         color: #999;
@@ -54,17 +71,14 @@
     display: block;
 
     .menu-icon {
+        width: auto;
+        height: auto;
         display: block;
         float: right;
-        width: 36px;
-        height: 26px;
         line-height: 0;
         padding-top: 10px;
         text-align: center;
-    
-        >svg {
-          fill: $grey-color-dark;
-        }
+        fill: $grey-color-dark;
       }
     
       input~.trigger {
